# keyboard_analysis

./: .gitignore  README.md  main.py  pyproject.toml
database/: key_presse.db
scripts/: create_table.py  env.py  frequecy_v2.py  frequency_keyboard_analyses.py  frequency_v3.py  keyboard_tracker.py  pairs_analyses.py
