[tool.black]
line-length = 79

# target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

experimental-string-processing = true

[tool.isort]
line_length = 79

multi_line_output = 3

force_single_line = true

known_standard_library = [
 "tkinter",
 "json",
 "typing",
 "collections",
 "random",
 "logging",
 "time",
 "sqlite3",
 "string",
]

known_third_party = [
    "pydantic",
    "keyboard",
]

known_local_folder = [
]

sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

profile = "black"

[tool.pylint]
disable = [
    "too-few-public-methods",
    "missing-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]



[tool.poetry]
name = "keyboard-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
