[tool.black]
line-length = 79

# target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

experimental-string-processing = true

[tool.isort]
line_length = 79

multi_line_output = 3

force_single_line = true

known_standard_library = [
    "os",
    "typing",
    "collections",
    "time",
    "sqlite3",
    "string",
    "datetime",
]

known_third_party = [
    "pynput",
    "matplotlib",
    "seaborn",
    "pandas",
]

known_local_folder = [
    "scripts"
]

sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

profile = "black"

[tool.pylint]
disable = [
    "too-few-public-methods",
    "missing-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
]



[tool.poetry]
name = "keyboard-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
debugpy = "^1.8.11"
pynput = "^1.7.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
